service page done

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,12 +120,6 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
   .h1 {
     @apply text-[48px] lg:text-[80px] leading-[1.1] font-semibold
   }
@@ -135,4 +129,19 @@
   .h3 {
     @apply text-[20px] lg:text-[24px] leading-[1.1] font-semibold
   }
+  .text-outline {
+    -webkit-text-stroke: 1px #ffffff;
+  }
+  /* .text-outline-hover {
+    -webkit-text-stroke: 1px text-blue-500;
+  } */
 }
+
+
+/* * {
+  @apply border-border outline-ring/50;
+} */
+
+/* body {
+  @apply bg-background text-foreground;
+} */
