--- a/app/globals.css
+++ b/app/globals.css
@@ -142,6 +142,6 @@
   @apply border-border outline-ring/50;
 } */
 
-/* body {
-  @apply bg-background text-foreground;
-} */
+body {
+  font-family: "var(--font-jetbrainsMono)"
+}
